Gray background, over-rid bootsrap priorities, fixed footer / extra space at bottom of pages, cleaned up SCSS files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,6 @@ ul {
 }
 
 a:hover {
-  text-decoration: none !important;
-  color: white !important;
+  text-decoration: none;
+  color: white;
 }
