--- a/app/assets/stylesheets/components/_bh-btn.scss
+++ b/app/assets/stylesheets/components/_bh-btn.scss
@@ -117,3 +117,14 @@
    }
 } 
 
+// Sticky Button
+.bh-button-sticky-bottom {
+  display: flex;
+  position: sticky;
+  width: 100%;
+  height: 95px;
+  bottom: 49px;
+  margin: 0;
+  background-image: linear-gradient(to bottom, transparent, white);
+}
+
